# 1password-client-v2

./: Dockerfile  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
onepassword/: __init__.py  __main__.py  client.py  creds.py  decorators.py  encrypted_string.py  session_manager.py  settings.py  string_encryptor.py  utils.py
test/: test_client.py  test_docker_from_outside.py  test_string_encryptor.py
